all working before implementing userChanges